--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
 Designs/*
 .DS_Store
 ToDo.md
-Pods/*
+# OS X Finder
+.DS_Store
+.hg/
+# Xcode per-user config
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*xcuserdata
+
+# Build products
+build/
+output/
+*.o
+*.LinkFileList
+*.hmap
+
+# Automatic backup files
+*~.nib/
+*.swp
+*~
+*.dat
+*.dep
+
+Pods/
